Fixed font links and reduced animations a bit

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1,6 +1,6 @@
 @import 'markdown';
-@import url('http://fonts.cdnfonts.com/css/copperplate');
-@import url('http://fonts.cdnfonts.com/css/century-gothic');
+@import url('https://fonts.cdnfonts.com/css/copperplate');
+@import url('https://fonts.cdnfonts.com/css/century-gothic');
 
 body {
   @apply antialiased;
