--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -15,7 +15,7 @@ body {
   font-family: 'Century Gothic', sans-serif;
 }
 
-h2{
+h2 {
   font-family: 'Copperplate', sans-serif;
 }
 
@@ -23,6 +23,7 @@ h2{
 .page-leave-active {
   transition: opacity 0.5s;
 }
+
 .page-enter,
 .page-leave-active {
   opacity: 0;
@@ -39,3 +40,25 @@ h2{
   opacity: 0;
   transform: translate(-30px, 0);
 }
+
+
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 5px grey;
+//   border-radius: 10px;
+// }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: #b30000;
+// }
