--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -41,24 +41,28 @@ h2 {
   transform: translate(-30px, 0);
 }
 
-
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px grey;
-//   border-radius: 10px;
-// }
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 10px;
-}
-
 html {
   scroll-behavior: smooth;
 }
 
-// /* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #b30000;
-// }
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #FDB515; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  // background: #333333; 
+  background: #000;
+  // border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
