--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -19,6 +19,11 @@ h2 {
   font-family: 'Copperplate', sans-serif;
 }
 
+h1 {
+  font-family: 'Copperplate', sans-serif;
+  font-size: 2em;
+}
+
 .page-enter-active,
 .page-leave-active {
   transition: opacity 0.5s;
